--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -141,6 +141,10 @@ on early-boot
     chmod 0664 /sys/class/graphics/fb0/msm_cmd_autorefresh_en
 
 on boot
+    # Thermal Profile
+    write /sys/class/thermal/thermal_message/sconfig 0
+
+on boot
     chown system system /sys/bus/i2c/devices/3-0038/set_cover_mode
     chmod 0660 /sys/bus/i2c/devices/3-0038/set_cover_mode
     chown bluetooth bluetooth /sys/module/bluetooth_power/parameters/power
