--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -526,6 +526,10 @@ gMDNSResponseTypeSRVPriority=0
 # mDNS response typeSRVWeight
 gMDNSResponseTypeSRVWeight=0
 
+# TheCrazyLex@PA set beacon missed count threshold to improve stability
+gRoamBmissFirstBcnt=25
+gRoamBmissFinalBcnt=35
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
